<resources>
    <string name="app_name">DoCare</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="background">Background</string>
    <string name="logo">LOGO</string>
    <string name="oxygen">Oxygen</string>
    <string name="beds">Beds</string>
    <string name="consultation">Consultation</string>
    <string name="blood_banks">Blood Banks</string>
    <string name="ambulance">Ambulance</string>
    <string name="hospitals">Hospitals</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="contact_number">Enter Contact Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="submit">Submit</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="iopennav">Open Navigation Drawer</string>
    <string name="closenavigation">Close Navigation Drawer</string>
    <string name="navbar">navbar</string>
    <string name="todo">TODO</string>
</resources>