<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_signout"
        android:title="@string/sign_out"
        android:icon="@drawable/logout"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/about_us"
        android:icon="@drawable/settings_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_help"
        android:title="@string/help"
        android:icon="@drawable/settings_icon"
        app:showAsAction="never"/>
</menu>