<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".HomeActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="373dp"
        android:layout_height="723dp"
        android:background="@drawable/home_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="154dp"
            android:layout_height="172dp"
            android:layout_marginStart="212dp"
            android:background="@drawable/cardlayout_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.068">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="141dp"
                android:layout_height="128dp"
                android:contentDescription="@string/oxygen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.097"
                app:srcCompat="@drawable/hospitalbed" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="94dp"
                android:layout_height="33dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="2dp"
                android:text="@string/beds"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="152dp"
            android:layout_height="166dp"
            android:layout_marginStart="212dp"
            android:background="@drawable/cardlayout_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.879">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="141dp"
                android:layout_height="128dp"
                android:contentDescription="@string/oxygen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.097"
                app:srcCompat="@drawable/ambulance" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="94dp"
                android:layout_height="33dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="2dp"
                android:text="@string/ambulance"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="156dp"
            android:layout_height="172dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/cardlayout_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.474">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="141dp"
                android:layout_height="128dp"
                android:contentDescription="@string/oxygen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.097"
                app:srcCompat="@drawable/consultation" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="136dp"
                android:layout_height="33dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="2dp"
                android:text="@string/consultation"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.619"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="156dp"
            android:layout_height="172dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/cardlayout_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.883">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="141dp"
                android:layout_height="128dp"
                android:contentDescription="@string/oxygen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.097"
                app:srcCompat="@drawable/hospital" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="94dp"
                android:layout_height="33dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="2dp"
                android:text="@string/hospitals"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="156dp"
            android:layout_height="172dp"
            android:layout_marginStart="208dp"
            android:background="@drawable/cardlayout_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.474">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="141dp"
                android:layout_height="128dp"
                android:contentDescription="@string/oxygen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.097"
                app:srcCompat="@drawable/donation" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="119dp"
                android:layout_height="39dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="2dp"
                android:text="@string/blood_banks"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:layout_constraintVertical_bias="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="156dp"
            android:layout_height="172dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/cardlayout_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="141dp"
                android:layout_height="128dp"
                android:contentDescription="@string/oxygen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.097"
                app:srcCompat="@drawable/oxygen" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="94dp"
                android:layout_height="33dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="2dp"
                android:text="@string/oxygen"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>